# tracker-miner-chatlog

./: .gitignore  autogen.sh  configure.ac  tracker-miner-chatlog.doap
data/: Makefile.am  org.freedesktop.Tracker1.Miner.ChatLog.service  org.freedesktop.Tracker1.Miner.ChatLog.service.in  tracker-miner-chatlog.desktop  tracker-miner-chatlog.desktop.in.in
po/: LINGUAS  POTFILES.in  cs.po  da.po  de.po  el.po  es.po  eu.po  fi.po  fur.po  hr.po  hu.po  id.po  it.po  ko.po  lt.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  zh_CN.po
src/: Makefile.am  client-factory.c  client-factory.h  contact.c  contact.h  conversation.c  conversation.h  entity-pool.c  entity-pool.h  entity.c  entity.h  helpers.c  helpers.h  logger-dumper.c  logger-dumper.h  main.c  miner.c  miner.h  observer.c  observer.h  room.c  room.h  text-channel.c  text-channel.h  text-event.c  text-event.h
